--- a/ctech405/module_1/page6.html
+++ b/ctech405/module_1/page6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a hello world web page</title>
+<title>Demo: br</title>
 </head>
 <body>
 <p>This is some text. It contains a line break.<br>The text continues on the next line. Same paragraph, just on a new line.<br>Here is another break.</p>
