--- a/ctech405/module_1/page5.html
+++ b/ctech405/module_1/page5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a hello world web page</title>
+<title>Demo: code</title>
 </head>
 <body>
 <p>The expression <code>2 + 3</code> in Python evaluates to <code>5</code></p>
