--- a/ctech405/module_1/page4.html
+++ b/ctech405/module_1/page4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a hello world web page</title>
+<title>Demo: b i u</title>
 </head>
 <body>
 <p>This text is in <str>bold</em></p>
