--- a/ctech405/module_1/page3.html
+++ b/ctech405/module_1/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a hello world web page</title>
+<title>Demo: h1 h2 h3 h4 h5 h6</title>
 </head>
 <body>
 <h1>This is a first-level heading</h1>
