--- a/ctech405/module_1/page2.html
+++ b/ctech405/module_1/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a hello world web page</title>
+<title>Demo: h1 p</title>
 </head>
 <body>
 <h1>This is a heading</h1>
