--- a/ctech405/module_1/page1.html
+++ b/ctech405/module_1/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>This is a hello world web page</title>
+<title>Demo: p</title>
 </head>
 <body>
 <p>This is the first paragraph.</p>
