--- a/ctech405/module_1/page10.html
+++ b/ctech405/module_1/page10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Demo: p</title>
+<title>Demo: blockquote</title>
 </head>
 <body>
 <p>This is the opening of Charles Dickens's <i>A Tale of Two Cities</i>:</p>
