--- a/ctech405/module_1/page12.html
+++ b/ctech405/module_1/page12.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p>This is regular text.<p>
-<p>This is text<!-- with a commented out block-->.the second paragraph.</p>
+<p>This is text<!-- with a <i>commented out</i> block-->.the second paragraph.</p>
 </body>
 </html>
