--- a/ctech405/module_2/link3.html
+++ b/ctech405/module_2/link3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Demo: p</title>
+<title>Demo: absolute URLs</title>
 </head>
 <body>
   <p>This web page has an image on it.</p>
