--- a/ctech405/module_3/pride-styled.html
+++ b/ctech405/module_3/pride-styled.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Pride and Prejudice</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="pride-styles.css">
 </head>
 <body>
 <h1>Pride and Prejudice</h1>
