--- a/ctech405/module_2/link1.html
+++ b/ctech405/module_2/link1.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <p>This web page has an image on it.</p>
-  <p> And here it is. <img src="http://xxx"> There. Wasn't that a great picture? KTHXBAI.</p>
+  <p> And here it is. <img src="http://somerandomsite.net/cat.png"> There. Wasn't that a great picture? KTHXBAI.</p>
 </body>
 </html>
