--- a/ctech405/module_2/link2.html
+++ b/ctech405/module_2/link2.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <p>This web page has an image on it.</p>
-  <p> And here it is. <img src="http://xxx" title="you found the easter egg!" alt="An XXX" width="XXX" height="XXX"> There. Wasn't that a great picture? KTHXBAI.</p>
+  <p> And here it is. <img src="http://somerandomsite.net/cat.jpg" title="you found the easter egg!" alt="Two fluffy cats lying on their backs on a Persian rug" width="150" height="150"> There. Wasn't that a great picture? KTHXBAI.</p>
 </body>
 </html>
