--- a/ctech405/module_2/link3.html
+++ b/ctech405/module_2/link3.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Demo: absolute URLs</title>
+<title>Demo: relative URLs</title>
 </head>
 <body>
+<body>
   <p>This web page has an image on it.</p>
-  <p> And here it is. <img src="http://xxx"> There. Wasn't that a great picture? KTHXBAI.</p>
+  <p> And here it is. <img src="cat.jpg"> There. Wasn't that a great picture? KTHXBAI.</p>
+</body>
 </body>
 </html>
