--- a/ctech405/module_2/link6.html
+++ b/ctech405/module_2/link6.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <p>This web page has a video on it.</p>
-  <p> And here it is. <video src="http://xxx" controls poster="http://xxx" type="video/mp4"> There. Isn't that a great video? KTHXBAI.</p>
+  <p> And here it is. <video src="http://somerandomsite.net/cat-vid.mp4" controls poster="http://xxx" type="video/mp4"> There. Isn't that a great video? KTHXBAI.</p>
 </body>
 </html>
