--- a/ctech405/module_2/link5.html
+++ b/ctech405/module_2/link5.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <p>This web page has a video on it.</p>
-  <p> And here it is. <video src="http://somerandomsite.net/cat-vid.mp4" width="202" height="360" controls type="video/mp4"> There. Isn't that a great video? KTHXBAI.</p>
+  <p> And here it is. <video src="cat-vid.mp4" width="202" height="360" controls type="video/mp4"> There. Isn't that a great video? KTHXBAI.</p>
 </body>
 </html>
