Update and rename link7.html to link6.html

--- a/ctech405/module_2/link6.html
+++ b/ctech405/module_2/link6.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <p>This web page has an audio track on it.</p>
-  <p> And here it is. <audio src="http://xxx" controls type="audio/mpeg"> There. Isn't that a great track? KTHXBAI.</p>
+  <p> And here it is. <audio src="mozart.mp3" controls type="audio/mpeg"> There. Isn't that a great track? KTHXBAI.</p>
 </body>
 </html>
