Update and rename link9.html to link8.html

--- a/ctech405/module_2/link8.html
+++ b/ctech405/module_2/link8.html
@@ -7,6 +7,6 @@
   <p>This is a <a href="https://google.com">link to Google.</a></p>
   <p><a href="https://tech.cornell.edu">This entire paragraph is a link. You can make really long links, including with <b>formatted <i>text</i></b> in them!</a></p>
   <p>The following image is also a link. I wonder where it goes?</p>
-  <a href="https://www.youtube.com/watch?v=ZDOI0cq6GZM"><img src="xxx"></a>
+  <a href="https://www.youtube.com/watch?v=ZDOI0cq6GZM"><img src="cat.jpg"></a>
 </body>
 </html>
