--- a/ctech405/module_2/link7.html
+++ b/ctech405/module_2/link7.html
@@ -4,5 +4,5 @@
 <title>Demo: a</title>
 </head>
 <body>
-  <p>This is a <a href="https://google.com">link to Google.</a></p>
+  <p>This is a <a href="https://wikipedia.org">link to Wikipedia.</a></p>
 </body></html>
