--- a/ctech405/module_2/link8.html
+++ b/ctech405/module_2/link8.html
@@ -4,9 +4,9 @@
 <title>Demo: hyperlinks</title>
 </head>
 <body>
-  <p>This is a <a href="https://google.com">link to Google.</a></p>
+  <p>This is a <a href="https://wikipedia.org">link to Wikipedia.</a></p>
   <p><a href="https://tech.cornell.edu">This entire paragraph is a link. You can make really long links, including with <b>formatted <i>text</i></b> in them!</a></p>
   <p>The following image is also a link. I wonder where it goes?</p>
-  <a href="https://google.com"><img src="cat.jpg"></a>
+  <a href="https://wikipedia.org"><img src="cat.jpg"></a>
 </body>
 </html>
